= Changelog

:base: https://github.com/DAG-OS/cookiecutter-ansible-role
:v1_0_0: {base}/releases/tag/v1.0.0
:v1_0_1: {base}/compare/v1.0.0..v1.0.1
:v1_0_2: {base}/compare/v1.0.1..v1.0.2
:v1_0_3: {base}/compare/v1.0.2..v1.0.3
:v1_1_0: {base}/compare/v1.0.3..v1.1.0
:v1_1_1: {base}/compare/v1.1.0..v1.1.1
:unreleased: {base}/compare/v1.1.1..HEAD

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.1.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== {unreleased}[Unreleased]

This section tracks upcoming changes that are not yet released.

=== Added

* Role description via cookiecutter.

=== Changed

* README title now starts with `Ansible Role:`.
* Use Molecule min. Ansible version for `min_ansible_version` key in `meta/main.yml`.

== {v1_1_1}[v1.1.1]

=== Fixed

* Use role name as Molecule instance name.

== {v1_1_0}[v1.1.0]

=== Added

* Additional pre-commit hooks.
** Check for merge conflicts in files.
** Detect private keys.

=== Changed

* Bump pre-commit version.

=== Fixed

* Typo in changelog.

== {v1_0_3}[v1.0.3]

=== Added

* Ansible role argument validation file.

=== Changed

* Modify Ansible role meta information.

=== Fixed

* Ensure Ansible meta files are interpreted as YAML files.

== {v1_0_2}[v1.0.2]

=== Changed

* After initializing Ansible role via Molecule, remove redundant `tests` directory.

== {v1_0_1}[v1.0.1]

=== Added

* https://code.visualstudio.com/[VS Code] configuration for Ansible.

=== Changed

* Order of URL templates in CHANGELOG file.

=== Fixed

* Changelog comparison links.

== {v1_0_0}[v1.0.0]

=== Added

* A https://github.com/cookiecutter/cookiecutter[Cookiecutter] template for DAGOS Ansible roles, which includes:
** MIT license in initial commit.
** https://pre-commit.com/[pre-commit] hooks.
** Role testing via https://molecule.readthedocs.io/en/latest/[Molecule].
** A changelog.
** A README.